feat: ocultando button calendario horario fixo [stable]

--- a/app/src/less/buttons.less
+++ b/app/src/less/buttons.less
@@ -1,5 +1,9 @@
 // IMM-BTN
 
+.fc-agregarHorario-button {
+  display: none !important;
+}
+
 .imm-btn {
   display: inline-block;
   padding: .0625rem 1rem;
