--- a/app/src/js/app/components/projects/views/projectFormView.html
+++ b/app/src/js/app/components/projects/views/projectFormView.html
@@ -72,7 +72,7 @@
                     <input rows="7" ng-model="project.presupuesto">
 
                     </input>
-                    <b class="imm-frm__lbl-name">{{ 'projects.presupuesto' | translate }}</b>
+                    <b class="imm-frm__lbl-name">{{ 'projects.presupuesto' | translate }}<span class="required">*</span></b>
                 </label>
             </div>
             <div class="imm-frm__fld">
@@ -81,7 +81,7 @@
                     <textarea rows="7" cols="50" ng-model="project.description">
 
                     </textarea>
-                    <b class="imm-frm__lbl-name">{{ 'projects.description' | translate }}</b>
+                    <b class="imm-frm__lbl-name">{{ 'projects.description' | translate }}<span class="required">*</span></b>
                 </label>
             </div>
 
@@ -108,7 +108,7 @@
                             <div ng-bind-html="option.name | highlight: $select.selected.name" value="option.value"></div>
                         </ui-select-choices>
                     </ui-select>
-                    <b class="imm-frm__lbl-name">Active</b>
+                    <b class="imm-frm__lbl-name">Active<span class="required">*</span></b>
                 </label>
             </div>
 
