translates and toastjs

--- a/app/src/js/app/components/tasks/taskTrello/views/createTable.modal.html
+++ b/app/src/js/app/components/tasks/taskTrello/views/createTable.modal.html
@@ -1,12 +1,12 @@
 <div class="imm-modal imm-modal--medium">
 
   <div class="imm-modal__header">
-    <h1 class="imm-modal__title" style="margin-bottom: 1%;">Agregar Tablero de Trello</h1>
+    <h1 class="imm-modal__title" style="margin-bottom: 1%;">Add Trello board</h1>
   </div>
   <div class="imm-modal__cnt">
     <div>
       <form>
-       <label>Proyecto:</label><br>
+       <label>Project:</label><br>
        <ui-select append-to-body="true" class="imm-select imm-select--input" theme="selectize" ng-model="selected.value">
         <ui-select-match placeholder="Seleccionar Proyecto">
             {{$select.selected.name}}
