--- a/app/src/js/app/components/tasks/taskTrello/views/taskTrelloView.html
+++ b/app/src/js/app/components/tasks/taskTrello/views/taskTrelloView.html
@@ -8,10 +8,10 @@
         </div>
     </div>
      <div class="imm-btn__right">
-        <button style="background-color: steelblue; color: white; cursor: pointer;" ng-click="addBoard()">Agregar Tablero</button>
+        <button style="background-color: steelblue; color: white; cursor: pointer;" ng-click="addBoard()">Add board</button>
     </div>
 </div>
-<div style="text-align: center; background-color: steelblue; font-weight: bold; color:white; margin-bottom: 10px;">Para capturar tableros necesita agregar dentro de su tablero de Trello a lexart.brain. <a href='javascript:void(0)' ng-click="tutorialBot()" style="text-decoration: underline;"> Ver paso a paso</a></div>
+<div style="text-align: center; background-color: steelblue; font-weight: bold; color:white; margin-bottom: 10px;">To capture boards you need to add lexart.brain into your Trello board.<a href='javascript:void(0)' ng-click="tutorialBot()" style="text-decoration: underline;">Step by step</a></div>
 <div class="imm-wa__cnt">
     <table>
         <thead>
