feat: ajustes apis [stable]

--- a/app/src/js/app/components/tasks/taskTrello/views/taskTrelloView.html
+++ b/app/src/js/app/components/tasks/taskTrello/views/taskTrelloView.html
@@ -11,7 +11,7 @@
         <button style="background-color: steelblue; color: white; cursor: pointer;" ng-click="addBoard()">Add board</button>
     </div>
 </div>
-<div style="text-align: center; background-color: steelblue; font-weight: bold; color:white; margin-bottom: 10px;">To capture boards you need to add lexart.brain into your Trello board.<a href='javascript:void(0)' ng-click="tutorialBot()" style="text-decoration: underline;">Step by step</a></div>
+<div style="text-align: center; background-color: steelblue; font-weight: bold; color:white; margin-bottom: 10px;">To capture boards you need to add lexart.brain into your Trello board.<a href='javascript:void(0)' ng-click="tutorialBot()" style="text-decoration: underline; margin-left: 4px;">Step by step</a></div>
 <div class="imm-wa__cnt">
     <table>
         <thead>
