--- a/app/src/js/app/components/session/views/indexView.html
+++ b/app/src/js/app/components/session/views/indexView.html
@@ -9,7 +9,7 @@
                 </header>
                 <div class="imm-session-blk__cnt">
                     <ng-form name="login-frm">
-                        <form class="imm-form imm-form--hollow" ng-submit="authenticate(user.email, user.password)">
+                        <form class="imm-form imm-form--hollow">
                             <fieldset>
                                 <div class="imm-frm__fld">
                                     <label class="imm-frm__lbl">
