--- a/app/src/js/app/components/projects/views/projectFormView.html
+++ b/app/src/js/app/components/projects/views/projectFormView.html
@@ -69,7 +69,7 @@
             <div class="imm-frm__fld">
                 <label class="imm-frm__lbl">
                     <!--<input type="text" ng-model="project.description">-->
-                    <input rows="7" ng-model="project.presupuesto">
+                    <input rows="7" ng-model="project.presupuesto" type="number">
 
                     </input>
                     <b class="imm-frm__lbl-name">{{ 'projects.presupuesto' | translate }}<span class="required">*</span></b>
