--- a/app/src/js/app/shared/views/navbar.html
+++ b/app/src/js/app/shared/views/navbar.html
@@ -36,12 +36,12 @@
         <a  href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.reports">
             <i class="imm-icon imm-icon--analytics-ico"></i> <span ng-show="!thisHide">{{ 'Reportes' }}</span>
         </a>
-        <!-- <a ng-if="isAdmin == 'true'"  href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.CRM">
+        <a ng-if="isAdmin == 'true'"  href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.CRM">
             <i class="imm-icon imm-icon--catalogos-ico"></i> <span ng-show="!thisHide">{{ 'CRM'}}</span>
-        </a> -->
-        <!-- <a ng-if="isAdmin == 'true'"  href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.apps">
+        </a>
+        <a ng-if="isAdmin == 'true'"  href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.apps">
             <i class="imm-icon imm-icon--catalogos-ico"></i> <span ng-show="!thisHide">{{ 'APP’s'}}</span>
-        </a> -->
+        </a>
 
     </nav>
 
