--- a/app/src/less/layout.less
+++ b/app/src/less/layout.less
@@ -29,8 +29,8 @@
 
 .imm-menu {
 
-  background: @color-dark-gray;
-  width: @navbar-width;
+  background: @color-bg-side-bar;
+  width: @sidebar-width;
   transition: width 0.05s ease;
   // background-image: url("/assets/images/bg-menu.svg");
   // background-position: bottom center;
@@ -46,7 +46,7 @@
     min-height: 100vh;
     overflow: hidden;
     position: fixed;
-    padding-top: 52px;
+    // padding-top: 52px;
     padding-bottom: 180px;
 
     &:after {
@@ -93,7 +93,7 @@ button.imm-menu__icon--collapsed {
   justify-content : flex-start;
   vertical-align : middle;
   align-items : center;
-  padding-left: 22px;
+  padding-left: 15px;
 }
 
 .imm-menu__tit img {
