--- a/app/src/less/mixins.less
+++ b/app/src/less/mixins.less
@@ -3,8 +3,8 @@
 
 //@primary-color: red; // blue
 
-@font-sans-serif: 'Open Sans', sans-serif;
-@font-serif: 'Open Sans', sans-serif;
+// @font-sans-serif: 'Open Sans', sans-serif;
+// @font-serif: 'Open Sans', sans-serif;
 @font-size-body: 16px;
 @color-black: #000000;
 @color-white: #ffffff;
@@ -14,6 +14,7 @@
 @color-gray: #333333;
 @color-mid-gray: #8c8c8c;
 @color-dark-gray: #F95C33;
+
 @color-navigation-gray: #181A1C;
 @color-fields-gray: #EEEEEE;
 @color-disabled-gray: #DDDDDD;
@@ -24,7 +25,7 @@
 
 @primary-color: #181A1C;
 
-@navbar-width: 200px;
+@navbar-width: 400px;
 
 /* Warning messages colors */
 @color-red: #FF2020;
@@ -41,6 +42,9 @@
 @color-forecast: #F8D21C;
 @color-available: #4EE24A;
 
+/* Re-design variables */
+@color-bg-side-bar: #cdcdcd;
+@sidebar-width: 400px;
 
 @import (optional) "var.less";
 
