--- a/app/src/less/layout.less
+++ b/app/src/less/layout.less
@@ -3,11 +3,11 @@
 .app-view,
 .app-container,
 .imm-session {
-  display: table;
+  // display: table;
   width: 100%;
   height: 100%;
   height: 100vh;
-  table-layout: fixed;
+  // table-layout: fixed;
 }
 
 .imm-menu,
