--- a/app/src/less/redesign.less
+++ b/app/src/less/redesign.less
@@ -445,6 +445,9 @@ thead, tbody{
       background-color: @color-bk-dark-mode-secondary;
       border: 1px solid @color-bk-dark-mode;
     }
+    .imm-topbar-menu{
+      background: @color-bk-dark-mode
+    }
     
   }
   
