--- a/app/src/less/top-bar.less
+++ b/app/src/less/top-bar.less
@@ -2,11 +2,10 @@
     position: fixed;
     left: 0;
     top: 0;
-    height: 50px;
+    min-height: @topbar-height;
     width: 100%;
     z-index: 999;
-    
-    background: red;
+    background: #ffffff;
 }
 .top-bar__container{
     padding: 10px;
