--- a/app/src/less/var.less
+++ b/app/src/less/var.less
@@ -65,7 +65,10 @@
 /* NAVBAR */
 @navbar-logo-height: 60px;
 @navbar-logo-height-lg: 70px;
-@navbar-width: 180px;
+@navbar-width: 15%;
 @navbar-width-collapsed: 90px;
 @navbar-width-lg: 220px;
+@topbar-height: 80px;
+@topbar-width: 100%;
+
 
