--- a/app/src/js/app/shared/views/app.html
+++ b/app/src/js/app/shared/views/app.html
@@ -1,5 +1,5 @@
 <div class="app-container">
-    <nav class="imm-topbar-menu" ng-include="'app/shared/views/topbar.html'"></nav>
-    <nav class="imm-menu" ng-class="{'imm-menu__collapsed': thisHide == true}" ng-include="'app/shared/views/navbar.html'"></nav>
+    <div class="imm-topbar-menu" ng-include="'app/shared/views/topbar.html'"></div>
+    <div class="imm-menu" ng-class="{'imm-menu__collapsed': thisHide == true}" ng-include="'app/shared/views/navbar.html'"></div>
     <div class="imm-wa" ui-view></div>
 </div>
