--- a/app/src/js/app/shared/views/navbar.html
+++ b/app/src/js/app/shared/views/navbar.html
@@ -1,17 +1,6 @@
 <div class="imm-menu__wrp" ng-class="{'imm-menu__collapsed': thisHide == true}">
 
-    <div class="imm-menu__hdr" ng-class="{'imm-menu__collapsed': thisHide == true}" style="height: 100px;">
-        <a ng-href="/" class="imm-menu__tit">
-        <img src="/assets/images/lextracking-logo.svg" width="150px" title="LexTracking" alt="LexTracking" ng-show="!thisHide">
-        </a>
-        <p style="color: #fff; font-weight: 800; margin: 0 23px; font-size: 10px; line-height: 1.5;" ng-show="timerRunning">
-            <label title="{{currentTrack.projectName + ' - ' + currentTrack.taskName}}">{{currentTrack.projectName + ' - ' + currentTrack.taskName | truncateTail:true:45:'...'}}</label>
-            <label style="display: block;"><span style="vertical-align: super;">{{timer}}</span><span ng-click="stopTrack()">&nbsp;&nbsp;<img class="img_stop" src="/assets/images/stopNavBar.png"></span></label>
-        </p>
-        <!-- <a class="imm-menu__tools-btn" ng-click="hideItems()"></a> -->
-    </div>
-
-    <nav class="imm-menu__nav" ng-class="{'imm-menu__collapsed': thisHide == true}" style="padding-top: 50px;">
+    <nav class="imm-menu__nav" ng-class="{'imm-menu__collapsed': thisHide == true}">
         <a href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.dashboard">
             <i class="imm-icon imm-icon--analytics-ico"></i> <span ng-show="!thisHide">{{ 'navigation.dashboard' | translate }}</span>
         </a>
