--- a/app/src/less/nav.less
+++ b/app/src/less/nav.less
@@ -189,7 +189,7 @@
   // transition: background-color .2s ease-in, box-shadow .15s ease-in, width 0.05s ease;
   .user-select(none);
   font-family: 'Roboto', sans-serif;
-
+  margin: 10px 0px;
   &:hover {
     background-color: rgba(255,255,255,0.2);
     // box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
@@ -411,7 +411,7 @@
   .imm-menu__nav-item b:nth-child(1){
     position: absolute;
     top: -10px;
-    left: -10px;
+    left: -20px;
     height: 10px;
     width: 100%;
     background: @color-light-gray;
@@ -432,7 +432,7 @@
   .imm-menu__nav-item b:nth-child(2){
     position: absolute;
     bottom: -10px;
-    left: -10px;
+    left: -20px;
     height: 10px;
     width: 100%;
     background: @color-light-gray;
