add topnavbar with dropdowns

--- a/app/src/less/layout.less
+++ b/app/src/less/layout.less
@@ -17,7 +17,7 @@
   display: block;
   float: right;
   width: 85%;
-  margin-top: @topbar-height;
+  // margin-top: @topbar-height;
   height: 100vh;
   padding: 20px;
 }
